# python_programming

./: .gitignore  pyproject.toml
github_discussion_draft/: 01_typehint.md  02_import.md  03_async.md  99_else.md
note/: 0222.md  0308.md  0315.md  pre_test.md  pre_test.txt
quiz/: module_8.md
src/0308/: ex7_1.py  exam.py  ifstmt1.py  ifstmt2.py  ifstmt3.py  ifstmt4.py  main.ipynb
src/0315/: main.ipynb
